IPL Dashboard App-Assignment-4-React.js

--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -1,1 +1,33 @@
 /* Write your CSS here */
+.not-found-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-sm-bg.png');
+}
+
+.not-found {
+  font-family: 'Bree Serif';
+  font-size: 35px;
+  color: #ffffff;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .not-found-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
+  }
+
+  .not-found {
+    font-family: 'Bree Serif';
+    font-size: 50px;
+    color: #ffffff;
+  }
+}
