--- a/src/components/TeamMatches/index.css
+++ b/src/components/TeamMatches/index.css
@@ -1,36 +1,169 @@
 /* Write your CSS here */
+.rcb {
+  background-image: linear-gradient(to bottom, #d91c1f, #1e293b);
+}
+.kkr {
+  background-image: linear-gradient(to bottom, #4f5db0, #0f172a);
+}
+.k-xi-p {
+  background-image: linear-gradient(to bottom, #a4261d, #0f172a);
+}
+.csk {
+  background-image: linear-gradient(to bottom, #f7db00, #13418b);
+}
+.rr {
+  background-image: linear-gradient(to bottom, #5755a7, #0f172a);
+}
+.mi {
+  background-image: linear-gradient(to bottom, #13418b, #0f172a);
+}
+.sh {
+  background-image: linear-gradient(to bottom, #f26d22, #d91c1f);
+}
+.dc {
+  background-image: linear-gradient(to bottom, #4f5db0, #ffffff33);
+}
+
 .team-matches-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 2px solid black;
-  background-color: #d91c1f;
+  /* background-image: linear-gradient(to bottom, #d91c1f, #a4261d, #1e293b); */
   min-height: 100vh;
   font-family: 'Bree Serif';
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+@media (min-width: 768px) {
+  .team-matches-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    /* background-image: linear-gradient(to bottom, #d91c1f, #a4261d, #1e293b); */
+    min-height: 100vh;
+    font-family: 'Bree Serif';
+    padding-top: 100px;
+    padding-bottom: 100px;
+    /* border: 5px solid black; */
+  }
+}
+
+.matches-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .matches-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid white; */
+    width: 70%;
+  }
 }
 .team-container {
-  width: 70%;
+  width: 90%;
 }
 .team-banner {
-  height: 350px;
+  height: 130px;
   width: 100%;
 }
+@media (min-width: 768px) {
+  .team-container {
+    width: 100%;
+  }
+  .team-banner {
+    height: 350px;
+    width: 100%;
+  }
+}
+
 .latest-matches-text {
   color: #ffffff;
   font-size: 18px;
 }
+@media (min-width: 768px) {
+  .latest-matches-text {
+    color: #ffffff;
+    font-size: 18px;
+    margin-top: 25px;
+    margin-bottom: 7px;
+  }
+}
 .recent-matches-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 90%;
+  /* border: 5px solid black; */
+  flex-wrap: wrap;
+  margin-left: 0;
+  margin-top: 10px;
+  padding-left: 0;
+  list-style-type: none;
+}
+@media (min-width: 768px) {
+  .recent-matches-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    /* border: 5px solid black; */
+    flex-wrap: wrap;
+    margin-left: 0;
+    margin-top: 0px;
+    /* margin-right: 10px; */
+    padding-left: 0;
+    list-style-type: none;
+  }
+}
+
+.loader-class {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+.match-boxes-container {
+  width: 100%;
+  /* border: 2px solid white; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 70%;
-  border: 2px solid black;
   flex-wrap: wrap;
-  margin-left: 0;
-  margin-top: 20px;
-  padding-left: 0;
+  padding: 0;
+}
+@media (min-width: 768px) {
+  .match-boxes-container {
+    width: 100%;
+    /* border: 2px solid white; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .latest-container {
+    width: 100%;
+    /* border: 2px solid black; */
+  }
+}
+.latest-container {
+  width: 100%;
+  /* border: 2px solid black; */
 }
