--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,6 +1,6 @@
 /* Write your CSS here */
 .home-container {
-  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
+  background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-sm-bg.png');
   min-height: 100vh;
   background-size: cover;
   font-family: 'Bree Serif';
@@ -9,6 +9,13 @@
   justify-content: flex-start;
   align-items: center;
   padding-top: 50px;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .home-container {
+    background-image: url('https://assets.ccbp.in/frontend/react-js/ipl-dashboard-lg-bg.png');
+    padding-top: 50px;
+  }
 }
 .ipl-container {
   display: flex;
@@ -16,22 +23,54 @@
   align-items: center;
 }
 .ipl-logo {
-  height: 75px;
-  width: 50px;
+  height: 55px;
+  width: 35px;
   margin-right: 15px;
 }
 .ipl-heading {
   color: #ffffff;
-  font-size: 55px;
+  font-size: 48px;
 }
+@media (min-width: 768px) {
+  .ipl-logo {
+    height: 75px;
+    width: 50px;
+    margin-right: 15px;
+  }
+  .ipl-heading {
+    color: #ffffff;
+    font-size: 55px;
+  }
+}
+
 .team-cards-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  width: 60%;
-  border: 3px solid yellow;
-  padding-left: 0;
-  padding-right: 0;
+  width: 100%;
+  /* border: 3px solid yellow; */
+  padding-left: 10px;
+  padding-right: 10px;
   margin-top: 0;
+}
+@media (min-width: 768px) {
+  .team-cards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 60%;
+    /* border: 3px solid yellow; */
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 0;
+  }
+}
+.loader-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
 }
