--- a/src/components/LatestMatch/index.css
+++ b/src/components/LatestMatch/index.css
@@ -1,33 +1,87 @@
 /* Write your CSS here */
-.latest-matches-container {
+.latest-matches-container-sm {
   display: flex;
+  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   background-color: #1e293b;
   color: #ffffff;
   border-radius: 15px;
   padding-top: 40px;
-  padding-left: 40px;
-  padding-right: 40px;
+  /* padding-left: 10px;
+  padding-right: 10px; */
   padding-bottom: 25px;
+  margin-bottom: 30px;
 }
+.latest-matches-container-lg {
+  display: none;
+}
+@media (min-width: 768px) {
+  .latest-matches-container-sm {
+    display: none;
+  }
+  .latest-matches-container-lg {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #1e293b;
+    color: #ffffff;
+    border-radius: 15px;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 25px;
+    /* width: 120%; */
+    margin-top: 0;
+    margin-bottom: 30px;
+  }
+}
+
 .team-details-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  width: 33%;
+  width: 70%;
   /* border: 2px solid white; */
-  /* padding-left: 40px; */
+  padding-left: 20px;
 }
+@media (min-width: 768px) {
+  .team-details-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 33%;
+    /* border: 2px solid white; */
+    /* padding-left: 40px; */
+  }
+}
+
+.first-container-sm {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  /* border: 2px solid orange; */
+  margin-left: 0;
+}
+@media (min-width: 768px) {
+  .team-details-first-container-sm {
+    display: inline;
+  }
+}
+
 .team-name {
-  font-size: 35px;
+  font-size: 25px;
   /* border: 2px solid yellow; */
   text-align: start;
   margin: 0;
+  font-weight: 400;
 }
 .date {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 400;
   margin-top: 30px;
   margin-bottom: 20px;
@@ -39,6 +93,29 @@
   font-size: 15px;
   font-weight: 400;
 }
+@media (min-width: 768px) {
+  .team-name {
+    font-size: 35px;
+    /* border: 2px solid yellow; */
+    text-align: start;
+    margin: 0;
+    font-weight: 400;
+  }
+  .date {
+    font-size: 25px;
+    font-weight: 400;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+
+  .description {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-weight: 400;
+  }
+}
+
 .logo-container {
   width: 34%;
   display: flex;
@@ -46,26 +123,71 @@
   justify-content: center;
   align-items: center;
   /* border: 2px solid yellow; */
+  /* padding-right: 10px; */
 }
+@media (min-width: 768px) {
+  .logo-container {
+    width: 34%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid yellow; */
+  }
+}
+
 .team-logo-alignment {
-  height: 200px;
+  height: 80px;
   width: 70%;
 }
+@media (min-width: 768px) {
+  .team-logo-alignment {
+    height: 200px;
+    width: 60%;
+  }
+}
+
+.horizontal-rule-sm {
+  width: 100%;
+  color: #475569;
+}
+
 .innings-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
-  width: 33%;
-  /* padding-right: 40px; */
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  padding-left: 20px;
   /* border: 2px solid blue; */
+  padding-top: 20px;
 }
 .innings-heading {
-  font-size: 20px;
+  font-size: 16px;
   margin: 0;
-  font-weight: 400;
+  font-weight: 300;
 }
 .team-description {
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 400;
+}
+@media (min-width: 768px) {
+  .innings-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 33%;
+    /* padding-right: 40px; */
+    /* border: 2px solid blue; */
+  }
+  .innings-heading {
+    font-size: 20px;
+    margin: 0;
+    font-weight: 400;
+  }
+  .team-description {
+    font-size: 15px;
+    font-weight: 400;
+  }
 }
