--- a/src/components/MatchCard/index.css
+++ b/src/components/MatchCard/index.css
@@ -1,5 +1,5 @@
 /* Write your CSS here */
-.recent-matches-container {
+/* .recent-matches-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -10,57 +10,105 @@
   margin-left: 0;
   margin-top: 20px;
   padding-left: 0;
-}
+} */
 
 .list-item-container {
   list-style-type: none;
   color: #ffffff;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  width: 30%;
+  width: 48%;
+  height: 280px;
   background-color: #1e293b;
   border: 0;
   border-radius: 18px;
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding: 30px;
   border: 2px solid white;
-  margin-left: 0px;
-
-  margin-bottom: 30px;
+  /* margin: 7px; */
+  margin-left: 0;
+  margin-bottom: 20px;
 }
+@media (min-width: 768px) {
+  .list-item-container {
+    list-style-type: none;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 31%;
+    height: 500px;
+    background-color: #1e293b;
+    border: 0;
+    border-radius: 18px;
+    padding: 30px;
+    border: 2px solid white;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 30px;
+  }
+}
+
 .recent-team-name {
-  font-size: 25px;
+  font-size: 16px;
   text-align: center;
-  font-weight: 500;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-top: 0;
-  /* border: 2px solid yellow; */
+  font-weight: 400;
 }
 .team-image {
-  height: 180px;
-  width: 60%;
+  height: 50px;
+  width: 50%;
   margin-bottom: 0;
   /* border: 2px solid yellow; */
 }
 .match-status {
-  font-size: 16px;
+  font-size: 12px;
   text-align: center;
-  font-weight: 500;
+  font-weight: 400;
   /* border: 2px solid yellow; */
-  margin-top: 25px;
-  margin-bottom: 25px;
 }
+@media (min-width: 768px) {
+  .recent-team-name {
+    font-size: 25px;
+    text-align: center;
+    font-weight: 500;
+  }
+  .team-image {
+    height: 180px;
+    width: 60%;
+    margin-bottom: 0;
+    /* border: 2px solid yellow; */
+  }
+  .match-status {
+    font-size: 16px;
+    text-align: center;
+    font-weight: 500;
+    /* border: 2px solid yellow; */
+  }
+}
+
 .loss {
-  font-size: 25px;
+  font-size: 15px;
   text-align: center;
   color: #e31a1a;
   /* border: 2px solid yellow; */
 }
 .won {
-  font-size: 25px;
+  font-size: 15px;
   text-align: center;
   color: #18ed66;
+}
+@media (min-width: 768px) {
+  .loss {
+    font-size: 25px;
+    text-align: center;
+    color: #e31a1a;
+    /* border: 2px solid yellow; */
+  }
+  .won {
+    font-size: 25px;
+    text-align: center;
+    color: #18ed66;
+  }
 }
