--- a/src/components/TeamCard/index.css
+++ b/src/components/TeamCard/index.css
@@ -2,30 +2,72 @@
 .team-card-container {
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  height: 120px;
+  justify-content: space-between;
   align-items: center;
   border: 1px solid #ffffff;
   background-color: #ffffff33;
-  border-radius: 10px;
+  border-radius: 15px;
   padding: 10px;
-  margin: 12px;
 }
+@media (min-width: 768px) {
+  .team-card-container {
+    width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid #ffffff;
+    background-color: #ffffff33;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 0px;
+  }
+}
+
 .team-logo {
-  height: 120px;
-  width: 120px;
-  margin-left: 10px;
-  margin-right: 10px;
+  height: 60px;
+  width: 60px;
+  /* margin-left: 10px; */
+  margin-right: 5px;
 }
 .team-name-value {
   color: #ffffff;
-  font-size: 27px;
+  font-size: 15px;
   text-align: center;
   font-weight: 500;
 }
+@media (min-width: 768px) {
+  .team-logo {
+    height: 120px;
+    width: 120px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .team-name-value {
+    color: #ffffff;
+    font-size: 27px;
+    text-align: center;
+    font-weight: 500;
+    margin-right: 10px;
+    /* margin-left: 10px; */
+  }
+}
+
 .list-item-link-value {
   text-decoration: none;
-  width: 45%;
+  width: 44%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  margin: 10px;
+}
+@media (min-width: 768px) {
+  .list-item-link-value {
+    text-decoration: none;
+    width: 45%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
